# Sistemas3

./: CMakeLists.txt
src/: CPU.cpp  CPU.h  Clock.cpp  Clock.h  Computer.cpp  Computer.h  Cycle_Element.cpp  Cycle_Element.h  IO.cpp  IO.h  Memory.cpp  Memory.h  Process.cpp  Process.h  Queue.cpp  Queue.h  Schedule.cpp  Schedule.h  main.cpp
